2007-11-29  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpprojection.c (gimp_projection_idle_render_init):
	raise the priority of the idle renderer to G_PRIORITY_DEFAULT_IDLE.
	Should fix bug #499150.

2007-11-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/actions/drawable-commands.c (drawable_flip_cmd_callback):
	fixed orientation type used for linked items (bug #499161).

	* app/core/gimpdrawable-transform.c
	(gimp_drawable_transform_tiles_flip): fixed typo in if condition
	and added more sanity checks.

2007-11-26  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/wmf.c: avoid filename encoding problems by not
	using wmf_file_open() but mapping the file into memory with
	GMappedFile. Fixes bug #499329.

2007-11-21  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.3 (interface age 3).

2007-11-20  Sven Neumann  <sven@gimp.org>

	* Made 2.4.2 release.

2007-11-20  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/widgets/gimpcontainercombobox.c: set the combo insensitive
	when it has no items. Fixes bug #498511.

2007-11-20  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/t-o-p-logo.scm: applied patch from
	Ulf-D. Ehlert that fixes the background color used in the Particle
	Trace filter (bug #498282).

2007-11-19  Tor Lillqvist  <tml@novell.com>

	Merged from trunk:

	* libgimpwidgets/gimpcolorscale.c (gimp_color_scale_render_stipple):
	Don't write past end of buffer (bug #399484).

2007-11-16  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/base/lut-funcs.c (equalize_lut_setup): make sure we don't
	get stuck in a loop if all pixels are transparent (bug #497291).

2007-11-16  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* libgimpconfig/gimpcolorconfig.c: changed default value for using
	the system monitor profile. Many users seem to have broken monitor
	profiles and it's hard to figure out how to fix this (bug #496890).