@@ -1,3 +1,10 @@
+2007-11-29  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	Merged from trunk:
+
+	* plug-ins/Lighting/lighting_ui.c: make sure to update bumpmap
+	when combo is changed.  Addresses bug #500317.
+
 2007-11-29  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
